test with kotlinc 1.8.0-release-345

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,6 +37,10 @@
                 text="Update Project Info And Upload">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
+        <action class="cn.hylstudio.skykoma.plugin.idea.action.TestAction" id="TestAction"
+                text="TestAction">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
     </actions>
     <extensions defaultExtensionNs="com.intellij">
         <applicationConfigurable instance="cn.hylstudio.skykoma.plugin.idea.config.IdeaPluginSettingsDialog" />
