--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -34,11 +34,18 @@
 
     <actions>
         <action class="cn.hylstudio.skykoma.plugin.idea.action.UpdateProjectInfoAction" id="UpdateProjectInfoAction"
-                text="Update Project Info And Upload">
+                text="Skykoma: Upload Project Info">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
-        <action class="cn.hylstudio.skykoma.plugin.idea.action.TestAction" id="TestAction"
-                text="TestAction">
+        <action
+                id="EditorBasics.EditorIllustrationAction"
+                class="cn.hylstudio.skykoma.plugin.idea.action.ExecuteScriptContextAction"
+                text="Skykoma: Run Selection Script"
+                description="Run Selection Script">
+            <add-to-group group-id="EditorPopupMenu" anchor="first"/>
+        </action>
+        <action class="cn.hylstudio.skykoma.plugin.idea.action.ShowScriptingEditorAction" id="ShowScriptEditorAction"
+                text="Skykoma: IDE Scripting Console">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
     </actions>
