--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -54,6 +54,8 @@
         </action> -->
     </actions>
     <extensions defaultExtensionNs="com.intellij">
+        <toolWindow id="Skykoma" anchor="right" icon="/tool-window-icon.svg"
+                    factoryClass="cn.hylstudio.skykoma.plugin.idea.toolwindow.SkykomaToolWindowFactory"/>
         <applicationConfigurable instance="cn.hylstudio.skykoma.plugin.idea.config.IdeaPluginSettingsDialog" />
         <applicationConfigurable instance="cn.hylstudio.skykoma.plugin.idea.config.IdeaPluginCodeGenSettingsDialog" />
         <defaultLiveTemplates file="/liveTemplates/skykomaLiveTemplates.xml"/>
