--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,6 +12,8 @@
     <!-- Product and plugin compatibility requirements -->
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.java</depends>
+    <depends>org.jetbrains.idea.maven</depends>
+    <depends>Git4Idea</depends>
 
     <!-- Text to display as description on Preferences/Settings | Plugin page -->
     <description>
