--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -34,7 +34,7 @@ jobs:
       uses: gradle/gradle-build-action@v2.9.0
       with:
         gradle-version: '7.4.2'
-        arguments: buildPlugin -PprojVersion=${{steps.get_version.outputs.VERSION}}
+        arguments: buildPlugin publishPlugin -PprojVersion=${{steps.get_version.outputs.VERSION}} -PpublishToken={{secrets.IDEA_PUBLISH_TOKEN}}
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
