--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
 # Temporary workaround for Kotlin Compiler 1.8.20 OutOfMemoryError -> https://jb.gg/intellij-platform-kotlin-oom
-kotlin.incremental.useClasspathSnapshot=false
+#kotlin.incremental.useClasspathSnapshot=false
